[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-miner-stubs"
version = "0.0.2"
description = "PEP 561 type stubs for stream_miner"
requires-python = ">=3.12"
classifiers = ["Typing :: Stubs Only"]

# ищем implicit namespace packages (PEP 420), т.к. у тебя __init__.pyi
[tool.setuptools.packages.find]
namespaces = true
include = ["stream_miner*"]

# кладём все .pyi как данные
[tool.setuptools.package-data]
"*" = ["*.pyi", "**/*.pyi"]
