[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-miner-stubs"             # имя дистрибутива на (Test)PyPI
version = "0.0.3"
description = "PEP 561 type stubs for stream_miner"
requires-python = ">=3.12"
classifiers = ["Typing :: Stubs Only"]

[tool.setuptools]
# ЯВНО перечисляем пакеты, чтобы колесо содержало папку stream_miner/
packages = [
  "stream_miner",
  "stream_miner.framework",
  "stream_miner.framework.core",
  "stream_miner.framework.core.parser",
]

[tool.setuptools.package-data]
# Кладём все .pyi
"stream_miner" = ["**/*.pyi"]
