[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-miner-stubs"
version = "0.0.8"
description = "PEP 561 type stubs for stream_miner"
requires-python = ">=3.12"
classifiers = ["Typing :: Stubs Only"]

[tool.setuptools]
packages = [
  "stream_miner",
  "stream_miner.framework",
  "stream_miner.framework.core",
  "stream_miner.framework.core.parser",
  "stream_miner.framework.core.http",
]

[tool.setuptools.package-data]
"stream_miner" = ["**/*.pyi"]
